--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>Or Shoham Resume</title>
+  <title>Or Shoham's Resume</title>
   <link rel="shortcut icon" href="icon.ico" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
