added about me section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <i
                   class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"
                 ></i
-                >Full Stack Web Developer
+                >Junior Full Stack Web Developer
               </p>
               <p>
                 <i
@@ -167,6 +167,23 @@
         <!-- Right Column -->
         <div class="w3-twothird">
           <div class="w3-container w3-card w3-white w3-margin-bottom">
+            <h2 class="w3-text-gray w3-padding-16">
+              <i
+                class="fa fa-user-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"
+              ></i>
+              About Me
+            </h2>
+            <div class="w3-container">
+              Hi there! My name is Or Shoham, a young, curious, and enthusiastic
+              Junior Full Stack Web Developer. I see myself as a sharp-minded
+              and fast learning individual. I love working with people and trust
+              my interpersonal relations to find my place inside any team I may
+              work with in the future. I am a big fan of teamwork that gets the
+              job done and I am currently looking for my next challenge.
+              <hr />
+            </div>
+          </div>
+          <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i
                 class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"
@@ -186,10 +203,10 @@
                 <span class="w3-tag w3-teal w3-round">Current</span>
               </h6>
               <p>
-                After finishing my service, I started working at the Cafe as a
-                waiter and was soon promoted to be a Shift Supervisor as the
-                Manager saw my work ethic and responsibility. I was also offered
-                a job as the manager of the second, smaller Cafe.
+                After finishing my military service, I started working at the
+                Cafe as a waiter and was soon promoted to be a Shift Supervisor
+                as the Manager saw my work ethic and responsibility. I was also
+                offered a job as the manager of the second, smaller Cafe.
               </p>
               <hr />
             </div>
@@ -204,25 +221,14 @@
               <p>
                 Joined the army as a warrior in the Paratroopers Brigade.
                 Finished basic and advanced training as the Platoon Commander's
-                signaler. After a year of service I decided to become a driver
-                to mix things up.I was part of all the drills and training of
-                the Battalion. My commander quickly liked my work and
-                dedication, and promoted to be the Platoon Sergeant. I was in
+                signaler (Kashar). After a year of service, I decided to become
+                a driver to mix things up.I was part of all the drills and
+                training of the Battalion. My commander quickly liked my work
+                and dedication and promoted to be the Platoon Sergeant. I was in
                 charge of 8-12 soldiers.
               </p>
               <hr />
             </div>
-            <!-- <div class="w3-container">
-              <h5 class="w3-opacity">
-                <b>Graphic Designer / designsomething.com</b>
-              </h5>
-              <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 -
-                Mar 2012
-              </h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <br />
-            </div> -->
           </div>
 
           <div class="w3-container w3-card w3-white">
