--- a/index.html
+++ b/index.html
@@ -168,9 +168,7 @@
         <div class="w3-twothird">
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-gray w3-padding-16">
-              <i
-                class="fa fa-user-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"
-              ></i>
+              <i class="fa fa-user-circle fa-fw w3-xxlarge w3-text-teal"></i>
               About Me
             </h2>
             <div class="w3-container">
