--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015
               </h6>
               <p>
-                High School Diploma. Bagrut Certificate with 5 units of Math, 5
-                units of English, 5 units of Biology and 5 units of Computer
-                science.
+                High School Diploma and Bagrut Certificate with 5 units of
+                Computer Science (Web Development and C# Object Oriented
+                Programming)
               </p>
               <hr />
             </div>
