added finale project

--- a/index.html
+++ b/index.html
@@ -80,12 +80,20 @@
                 >
               </p>
               <p>
-                <a href="">
+                <a href="https://github.com/or19120?tab=repositories">
                   <i
                     class="fa fa-github fa-fw w3-margin-right w3-large w3-text-teal"
                     aria-hidden="true"
                   ></i
                   >My Github</a
+                >
+              </p>
+              <p>
+                <a href="https://blooming-woodland-88614.herokuapp.com/">
+                  <i
+                    class="fa fa-bookmark fa-fw w3-margin-right w3-large w3-text-teal"
+                  ></i>
+                  Jobby - My React - Node project</a
                 >
               </p>
               <hr />
